@startuml
!pragma layout smetana

class Main {
+ static void main(String[] args)
}

class StreamingService{
- String name
- String movieDataPath
- String seriesDataPath
- String userDataPath
- HashMap<String, String> userData
- User currentUser
- TextUI ui
- FileIO io
- MediaManager manager
+ StreamingService(String name)
- void startStreamingService()
- void createUser()
- void addUser(User u)
- void loadUserData()
- void loadWatchlist()
- void loadPrevWatched()
- void homeMenu()


}

class MediaManager {
- TextUI
- FileIO
- ArrayList<Movies> movies
- ArrayList<Series> series
- User currentUser
- StreamingService streamingService
+ MediaManager(ui, io, User currentUser, String movieDataPath, String seriesDataPath, StreamingService streamingService)
+ void searchByTitle(User currentUser)
+ void searchByGenre()
+ void displayMediaInformation(Media media)
+ void playMedia()
- void addToWatchlist(Media media)
+ void medialistInteraction(User currentUser, List<Media> mediaList, String listName)
}

class User {
- String username
- String password
- ArrayList<Media> watchlist
- Collection<Media> prevWatched
+ User(String username, String password)
+ String toString()
+ void addToWatchlist(Media media)
- void addToPrevWatchedList(Media media)
+ String getUsername()
+ ArrayList<Media> getWatchlist()
+ ArrayList<Media> getPrevWatched()
}


abstract class Media{
# String mediaTitle
# double rating
# String genre
# String releaseYear
# String seasonAndEpisodes
+Media(String mediaTitle, String releaseYear, String genre, double rating, String seasonAndEpisodes)
+Media(String mediaTitle, String releaseYear, String genre, double rating)
+String getMediaTitle()
+double getRating()
+String getGenre()
+String getReleaseYear()
+String getSeasonsAndEpisodes()
}

class Movie{
+ Movie(String mediaTitle, String releaseYear, String genre, double rating)
+ String toString()
+ boolean equals(Object o)
+ int hashcode()
}

class Series{
+Series(String mediaTitle, String releaseYear, String genre, double rating, String seasonAndEpisodes)
+String toString()
+ boolean equals(Object o)
+ int hashcode()
}

class FileIO {
+ HashMap<String, String> readUserData(String path)
+ ArrayList<Movie> readMediaData(String path)
+ void SaveUserData(String userAsText, String path)
+ void saveMediaList(String username, ArrayList<Media> watchlist, String listType)
+ ArrayList<Media> loadMediaList(String username, String listType)
}

class TextUI {
- Scanner scan
+ void displayMsg(String msg)
+ int displayHomeMenu(String msg)
+ int promptNumeric(String msg)
+ String promptText(String msg)
}

Main *-- StreamingService
StreamingService *-- MediaManager
MediaManager *-- Media
StreamingService *-- User
StreamingService *-- FileIO
StreamingService *-- TextUI
Media <|-- Movie
Media <|-- Series
StreamingService *-- Media
User *-- Media
@enduml